TWEEK GSAP fix a flicker bug on dropdown

--- a/client/src/components/calendar/cal.scss
+++ b/client/src/components/calendar/cal.scss
@@ -337,6 +337,7 @@ $mobile: (max-width: 601px);
 
 .notHidden {
 	overflow: hidden;
+	height: auto;
 	background-color: #e4e4e4;
 	border: none;
 	box-shadow: none;
